# coloring

./: LICENSE  README.md  example.py  pyproject.toml  setup.py
.github/workflows/: python-app.yaml
coloring/: __init__.py  coloring.py  style.py
